force-app/main/default/objects/Reference_Contact__c/Reference_Contact__c.object-meta.xml
<CustomObject>
    <description>Junction object for Account and Contacts that are used for references</description>
    <label>Reference Contact</label>
    <nameField>
        <displayFormat>RC-{000000}</displayFormat>
        <label>Reference Contact Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reference Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>