force-app/main/default/objects/Reference_Contact__c/fields/Competitive_Takeway__c.field-meta.xml
<CustomField>
    <fullName>Competitive_Takeway__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Competitive Takeway</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Competitor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Reference Contacts (Competitive Takeway)</relationshipLabel>
    <relationshipName>Reference_CompetitiveAcc</relationshipName>
    <type>Lookup</type>
</CustomField>