force-app/main/default/objects/Reference_Contact__c/fields/Preferred_Communication_Method__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Communication_Method__c</fullName>
    <label>Preferred Communication Method</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Fax</fullName>
            </value>
            <value>
                <fullName>Site Visit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>