force-app/main/default/objects/Reference_Contact__c/fields/Reference_Account__c.field-meta.xml
<CustomField>
    <fullName>Reference_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Use this lookup to link to an account</inlineHelpText>
    <label>Reference Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Reference Contacts</relationshipLabel>
    <relationshipName>Reference_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>