force-app/main/default/objects/Reference_Contact__c/fields/Reference_Applications__c.field-meta.xml
<CustomField>
    <fullName>Reference_Applications__c</fullName>
    <label>Reference Applications</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Co-Pilot Truck</fullName>
            </value>
            <value>
                <fullName>Critical Event Reporting</fullName>
            </value>
            <value>
                <fullName>Driver Workflow</fullName>
            </value>
            <value>
                <fullName>Exact Fuel</fullName>
            </value>
            <value>
                <fullName>Extended Productivity</fullName>
            </value>
            <value>
                <fullName>HOS</fullName>
            </value>
            <value>
                <fullName>In-Cab Scanning</fullName>
            </value>
            <value>
                <fullName>Media Manager</fullName>
            </value>
            <value>
                <fullName>Performance Monitoring</fullName>
            </value>
            <value>
                <fullName>Telogis Navigo</fullName>
            </value>
            <value>
                <fullName>Trip Manager</fullName>
            </value>
            <value>
                <fullName>Vehicle Diagnostics</fullName>
            </value>
            <value>
                <fullName>VIR</fullName>
            </value>
            <value>
                <fullName>Virtual Load View</fullName>
            </value>
            <value>
                <fullName>Web Browsing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>