force-app/main/default/objects/Reference_Contact__c/fields/Reference_Contact__c.field-meta.xml
<CustomField>
    <fullName>Reference_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Link to a contact</inlineHelpText>
    <label>Reference Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Reference_Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Reference Contacts</relationshipLabel>
    <relationshipName>ReferenceToContacts</relationshipName>
    <type>Lookup</type>
</CustomField>