force-app/main/default/objects/Reference_Contact__c/fields/Reference_Notes__c.field-meta.xml
<CustomField>
    <fullName>Reference_Notes__c</fullName>
    <inlineHelpText>Write any notes such as testimonial or any ROI numbers that the customer has shared. You can also add information that your colleagues would benefit when recommending this customer to a prospect.</inlineHelpText>
    <label>Reference Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>