force-app/main/default/objects/Reference_Contact__c/fields/Reference_Products__c.field-meta.xml
<CustomField>
    <fullName>Reference_Products__c</fullName>
    <label>Reference Products</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>MCP100</fullName>
            </value>
            <value>
                <fullName>MCP110</fullName>
            </value>
            <value>
                <fullName>MCP200</fullName>
            </value>
            <value>
                <fullName>MCP50</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>