force-app/main/default/objects/Reference_Contact__c/fields/Usage__c.field-meta.xml
<CustomField>
    <fullName>Usage__c</fullName>
    <inlineHelpText>Number of times the contact has been used as a reference in the last 12 months</inlineHelpText>
    <label>Usage</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>